--- a/package.json
+++ b/package.json
@@ -30,18 +30,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "nuxt start"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/devtools": "^2.3.1",
     "@nuxt/eslint": "^1.2.0",
+    "@nuxt/fonts": "^0.11.0",
     "@nuxt/ui": "^2.21.1",
+    "@nuxtjs/sitemap": "^7.2.9",
+    "@types/node": "^22.13.11",
     "eslint": "^9.23.0",
     "nuxt": "^3.16.1",
     "nuxt-auth-sanctum": "^0.6.0",
-    "nuxt-laravel-echo": "^0.2.2",
-    "typescript": "^5.5.4",
+    "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.8",
@@ -51,6 +54,19 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher"
     ]
+  },
+  "dependencies": {
+    "@cashfreepayments/cashfree-js": "^1.0.5",
+    "@nuxt/image": "^1.10.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.10.1",
+    "nuxt-laravel-echo": "^0.2.2",
+    "nuxt-schema-org": "^5.0.4",
+    "vue-debounce": "^5.0.1",
+    "vue3-toastify": "^0.2.8"
   }
 }
