--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.1",
     "@nuxt/ui": "^2.21.1",
+    "@nuxtjs/robots": "^5.2.9",
+    "@nuxtjs/seo": "^3.0.2",
     "@nuxtjs/sitemap": "^7.2.9",
     "@types/node": "^22.14.0",
     "eslint": "^9.23.0",
@@ -67,6 +69,7 @@
     "@pinia/nuxt": "^0.10.1",
     "nuxt-laravel-echo": "^0.2.3",
     "nuxt-schema-org": "^5.0.4",
+    "nuxt-site-config": "^3.1.9",
     "vue-debounce": "^5.0.1",
     "vue3-toastify": "^0.2.8"
   }
