--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nuxt": "^3.16.2",
     "nuxt-auth-sanctum": "^0.6.1",
     "nuxt-laravel-echo": "^0.2.3",
+    "nuxt-swiper": "^2.0.0",
     "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
