--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nuxt-schema-org": "^5.0.4",
     "nuxt-site-config": "^3.1.9",
     "vue-debounce": "^5.0.1",
-    "vue3-toastify": "^0.2.8"
+    "vue3-toastify": "^0.2.8",
+    "yup": "^1.6.1"
   }
 }
