--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.1",
+    "@nuxt/scripts": "0.11.6",
     "@nuxt/ui": "^2.22.0",
     "@nuxtjs/robots": "^5.2.10",
     "@nuxtjs/seo": "^3.0.3",
     "@nuxtjs/sitemap": "^7.2.10",
     "@types/node": "^22.14.1",
+    "@unhead/vue": "^2.0.3",
     "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
     "nuxt-auth-sanctum": "^0.6.6",
